--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th"http://www.thymeleaf.org">
 	<head>
 		<title>CT1 DIEGO CARO</title>
 		<meta charset="UFT-8">
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="conteiner mt-4">
-			<h1></h1>
+			<h1>LISTAR Y AGREGAR</h1>
 			<a th:href="@{nuevo}" class="btn btn-primary">Nuevo Cliente</a>
 			<table class="table">
 				<thead>
