--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,48 +4,6 @@
 		<title>GRABAR CLIENTE</title>
 		<meta charset="UTF-8">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		<script>
-			function validarFormulario() {
-				var nombre = document.getElementsByName("Nombres")[0].value;
-			    var apellido = document.getElementsByName("Apellidos")[0].value;
-			    var dni = document.getElementsByName("dni")[0].value;
-			    var correo = document.getElementsByName("correo")[0].value;
-			    var fecha = document.getElementsByName("fechNacimiento")[0].value;
-				
-				// Validar nombre y apellido (entre 3 y 30 caracteres)
-				if (nombre.length < 3 || nombre.length > 30) {
-					alert("Nombre debe tener entre 3 y 30 caracteres.");
-					return false;
-				}
-				
-				if (apellido.length < 3 || apellido.length > 30) {
-					alert("Apellido debe tener entre 3 y 30 caracteres.");
-					return false;
-				}
-				
-				// Validar DNI (8 dígitos)
-				if (!/^\d{8}$/.test(dni)) {
-					alert("DNI debe tener exactamente 8 dígitos.");
-					return false;
-				}
-				
-				// Validar correo electrónico
-				if (!/^\S+@\S+\.\S+$/.test(correo)) {
-					alert("Correo electrónico no es válido.");
-					return false;
-				}
-				
-				// Validar fecha (formato "yyyy-MM-dd")
-				if (!/^\d{4}-\d{2}-\d{2}$/.test(fecha)) {
-					alert("Formato de fecha incorrecto. Utilice 'yyyy-MM-dd'.");
-					return false;
-				}
-				
-				// Si todas las validaciones son exitosas, el formulario se envía
-				return true;
-			}
-		</script>
-		
 	</head>
 	<body>
 		<div class="contanier mt-4">
@@ -89,9 +47,52 @@
 						<div class="card-footer">
 							<input type="submit" value="Guardar" class="btn btn-success"/>
 						</div>	
-					</div>	
+					</div>
+					
 				</form>		
 			</div>	
 		</div>
 	</body>
+	
+	<script>
+			function validarFormulario() {
+				var nombre = document.getElementsByName("Nombres")[0].value;
+			    var apellido = document.getElementsByName("Apellidos")[0].value;
+			    var dni = document.getElementsByName("dni")[0].value;
+			    var correo = document.getElementsByName("correo")[0].value;
+			    var fecha = document.getElementsByName("fechNacimiento")[0].value;
+				
+				
+				if (nombre.length < 3 || nombre.length > 30) {
+					alert("Nombre debe tener entre 3 y 30 caracteres.");
+					return false;
+				}
+				
+				if (apellido.length < 3 || apellido.length > 30) {
+					alert("Apellido debe tener entre 3 y 30 caracteres.");
+					return false;
+				}
+				
+				
+				if (!/^\d{8}$/.test(dni)) {
+					alert("DNI debe tener exactamente 8 dígitos.");
+					return false;
+				}
+				
+				
+				if (!/^\S+@\S+\.\S+$/.test(correo)) {
+					alert("Correo electrónico no es válido.");
+					return false;
+				}
+				
+				if (!/^\d{4}-\d{2}-\d{2}$/.test(fecha)) {
+					alert("Formato de fecha incorrecto. Utilice 'yyyy-MM-dd'.");
+					return false;
+				}
+				
+				alert("REGISTRO EXITOSO");
+		      return true;
+			}
+		</script>
+		
 </html>
